Time: 2 ms (47.27%), Space: 43.7 MB (75.92%) - LeetHub